--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,6 +11,7 @@
     "@storybook/addon-links": "^6.5.15",
     "@storybook/builder-vite": "^0.2.6",
     "@storybook/react": "^6.5.15",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/testing-library": "^0.0.13",
     "@vitejs/plugin-react": "^3.0.0",
     "babel-loader": "^8.3.0",
@@ -28,6 +29,7 @@
   },
   "scripts": {
     "dev": "start-storybook -p 6006",
-    "build": "build-storybook"
+    "build": "build-storybook",
+    "deploy-storybook": "storybook-to-ghpages"
   }
 }
