ci: atualizado package e yml

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "dev": "start-storybook -p 6006",
     "build": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "ci": "yarn install --frozen-lockfile"
   }
 }
