--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           node-version: 16
 
-      - run: npm ci
+      - run: yarn ci
 
-      - run: npm run build
+      - run: yarn build
 
       - name: Deploy storybook
         working-directory: ./packages/docs
