--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,9 +17,11 @@ jobs:
         with:
           node-version: 16
 
-      - run: yarn ci
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile --legacy-peer-deps
 
-      - run: yarn build
+      - name: Build Storybook
+        run: yarn build
 
       - name: Deploy storybook
         working-directory: ./packages/docs
