--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/docs",
+  "name": "@lsslima-ignite-ui/docs",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -18,10 +18,10 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@lsslima-ignite-ui/eslint-config": "*",
+    "@lsslima-ignite-ui/react": "*",
+    "@lsslima-ignite-ui/tokens": "*",
+    "@lsslima-ignite-ui/ts-config": "*",
     "@storybook/addon-a11y": "^6.5.15",
     "polished": "^4.2.2",
     "react": "^18.2.0",
