--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ignite-ui/eslint-config",
-  "version": "1.0.0",
+  "name": "@lsslima-ignite-ui/eslint-config",
+  "version": "1.1.0",
   "main": "index.js",
   "license": "MIT",
   "private": true,
