--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lsslima-ignite-ui/react",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -23,9 +23,9 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.0",
     "@radix-ui/react-checkbox": "^1.0.0",
-    "@radix-ui/react-toast": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.0.2",
     "@stitches/react": "^1.2.8",
-    "phosphor-react": "^1.4.1"
+    "phosphor-react": "^1.4.1",
+    "react-hot-toast": "^2.4.0",
+    "react-tooltip": "^5.5.1"
   }
 }
